// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> adds a brand node 1`] = `
<Navbar
  brand={
    <span
      className="brando"
    >
      I AM BRAND
    </span>
  }
  href="/"
  options={Object {}}
>
  <nav>
    <div
      className="nav-wrapper"
    >
      <a
        className="brand-logo"
        href="/"
      >
        <span
          className="brando"
        >
          I AM BRAND
        </span>
      </a>
      <a
        className="sidenav-trigger"
        data-target="mobile-nav"
        href="#!"
      >
        <Icon>
          <i
            className="material-icons"
          >
            menu
          </i>
        </Icon>
      </a>
      <ul
        className="hide-on-med-and-down "
      />
    </div>
  </nav>
  <ul
    className="sidenav"
    id="mobile-nav"
  />
</Navbar>
`;

exports[`<Navbar /> can be fixed 1`] = `
<Fragment>
  <div
    className="navbar-fixed"
  >
    <nav>
      <div
        className="nav-wrapper"
      >
        <a
          className="sidenav-trigger"
          data-target="mobile-nav"
          href="#!"
        >
          <Icon>
            menu
          </Icon>
        </a>
        <ul
          className="hide-on-med-and-down "
        />
      </div>
    </nav>
  </div>
  <ul
    className="sidenav"
    id="mobile-nav"
  />
</Fragment>
`;

exports[`<Navbar /> places brand on right if navbar is left aligned 1`] = `
<Fragment>
  <nav>
    <div
      className="nav-wrapper"
    >
      <a
        className="brand-logo"
        href="/"
      >
        logo
      </a>
      <a
        className="sidenav-trigger"
        data-target="mobile-nav"
        href="#!"
      >
        <Icon>
          menu
        </Icon>
      </a>
      <ul
        className="hide-on-med-and-down left"
      />
    </div>
  </nav>
  <ul
    className="sidenav"
    id="mobile-nav"
  />
</Fragment>
`;

exports[`<Navbar /> renders 1`] = `
<Fragment>
  <nav>
    <div
      className="nav-wrapper"
    >
      <a
        className="brand-logo left"
        href="/"
      >
        Logo
      </a>
      <a
        className="sidenav-trigger"
        data-target="mobile-nav"
        href="#!"
      >
        <Icon>
          menu
        </Icon>
      </a>
      <ul
        className="hide-on-med-and-down right"
      />
    </div>
  </nav>
  <ul
    className="sidenav"
    id="mobile-nav"
  />
</Fragment>
`;
